Update KeyRegistry to hold multiple possible keys per KeyEvent
Signed-off-by: dedetive <ded31459@hotmail.com>